--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "backend-rishu",
   "version": "1.0.0",
   "description": "backend learning ",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
     "rishu"
   ],
   "author": "Rishu Raushan",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
