--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Rishu Raushan",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.3"
   }
 }
